# fediwatcher

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fediwatcher-compose.yml
contrib/systemd/: env  fediwatcher.service  fediwatcher.timer
src/: app.rs  config.rs  get.rs  main.rs
src/influx/: mod.rs  push.rs  translate.rs
tests/conf.d/: arthurisson@social.thaega.fr  demo.funkwhale.audio.toml  mastodon.papey.fr.toml  palom.be.toml  papey@mastodon.papey.fr.toml  papey@rage.love.toml  pleroma.fr.toml  rage.love.toml
tests/json/: test.new.from.funkwhale.json  test.new.from.mastodon.json  test.new.from.mastodon_user.json  test.new.from.pleroma.json  test.new.from.pleroma_user.json
