[package]
name = "fediwatcher"
version = "0.3.0"
authors = ["Wilfried OLLIVIER aka Papey"]
edition = "2018"

[dependencies]
clap = "2.33.0"
log = "0.4.6"
env_logger = "0.6.2"
toml = "0.5"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
http = "0.1.17"
reqwest = "0.9.18"
url = "1.7.2"
influent = "0.4.1"