[package]
name = "fediwatcher"
version = "0.4.0"
authors = ["Wilfried OLLIVIER aka Papey"]
edition = "2018"

[dependencies]
clap = "2.33.0"
log = "0.4"
env_logger = "0.7"
toml = "0.5"
serde = { version = "1.0.106", features = ["derive"] }
tokio = "0.2.19"
serde_json = "1.0.51"
http = "0.2.1"
reqwest = "0.10.4"
futures = "^0.3.5"
futures-util = "^0.3.5"
futures-macro = "^0.3.5"
url = "2.1.1"
influxdb = { version = "0.3.0", features = ["derive"] }
